# DeepSeek-Prover-V1.5

./: README.md  deploy_prover.py  deploy_verifier.py  pyproject.toml  quick_start.py  send_request.sh
app/: prover.py  verifier.py
configs/: RMaxTS.py  sampling.py  sampling_few_shot.py
src/prover/: launch.py  utils.py
src/prover/algorithms/: rmax_tree_search.py
src/prover/lean/: ast_parser.py  proof.py  verifier.py
src/prover/workers/: __init__.py  data_loader.py  generator.py  scheduler.py  search.py
