[project]
name = "prover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
server = [
    "pytz==2022.1",
    "easydict==1.13",
    "torch==2.2.1",
    "transformers==4.40.1",
    "vllm==0.4.1",
    "numpy",
    "pandas",
    "tabulate",
    "termcolor",
    "accelerate==0.33.0",
]
